changed CommunityModel, CommunityFragment and CommunityAdapter

--- a/src/app/src/main/res/layout/card_about_layout.xml
+++ b/src/app/src/main/res/layout/card_about_layout.xml
@@ -7,7 +7,7 @@
     android:padding="8dp">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardview_event"
+        android:id="@+id/cardview_about"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
