--- a/src/app/src/main/res/layout/card_community_layout.xml
+++ b/src/app/src/main/res/layout/card_community_layout.xml
@@ -3,7 +3,6 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -15,6 +14,7 @@
         android:layout_marginRight="5dp"
         android:clickable="true"
         android:elevation="100dp"
+        android:focusable="true"
         card_view:cardCornerRadius="8dp">
 
         <RelativeLayout
@@ -22,11 +22,20 @@
             android:layout_height="wrap_content"
             android:padding="16dp">
 
+            <ImageView
+                android:id="@+id/img_community"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_alignParentTop="true"
+                android:elevation="100dp" />
+
             <TextView
                 android:id="@+id/txt_title_community"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/img_community"
                 android:layout_centerHorizontal="true"
+                android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -35,8 +44,44 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/txt_title_community"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:ellipsize="end"
+                android:maxLines="4" />
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txt_description_community"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+
+                <Button
+                    android:id="@+id/btn_meetup_community"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:background="@drawable/ic_meetup"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/btn_website_community"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/ic_website"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/btn_telegram_community"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/ic_telegram"
+                    android:visibility="gone" />
+            </RelativeLayout>
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
