--- a/src/app/src/main/res/layout/card_webinar_layout.xml
+++ b/src/app/src/main/res/layout/card_webinar_layout.xml
@@ -3,7 +3,6 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -11,38 +10,47 @@
         android:id="@+id/cardview_webinar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:clickable="true"
-        android:elevation="100dp"
-        card_view:cardCornerRadius="8dp">
+        android:focusable="true"
+        card_view:cardCornerRadius="8dp"
+        card_view:cardElevation="5dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:layout_height="wrap_content">
+
+
+            <ImageView
+                android:id="@+id/img_webinar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:src="@android:drawable/ic_menu_camera" />
 
             <TextView
                 android:id="@+id/txt_title_webinar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/img_webinar"
                 android:layout_centerHorizontal="true"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/img_webinar"
-                android:layout_width="200dp"
-                android:layout_height="150dp"
-                android:layout_below="@id/txt_title_webinar"
-                android:layout_centerHorizontal="true" />
 
             <TextView
                 android:id="@+id/txt_description_webinar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/img_webinar"
+                android:layout_below="@id/txt_title_webinar"
                 android:layout_centerHorizontal="true"
+                android:layout_marginEnd="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginStart="16dp"
                 android:ellipsize="end"
                 android:maxLines="4" />
 
@@ -50,8 +58,8 @@
 
     </android.support.v7.widget.CardView>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp" />
+    <!--    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp" />-->
 </LinearLayout>
